--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,7 +4,8 @@
     <Version>2.0.5</Version>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
-    <DebugType>full</DebugType>
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
     <NoWarn>NU5118</NoWarn>
   </PropertyGroup>
 </Project>
