--- a/AssertMessage/AssertMessage.csproj
+++ b/AssertMessage/AssertMessage.csproj
@@ -7,9 +7,13 @@
     <Authors>Rafał Jasica, Simon Cropp</Authors>
     <Description>Adds 'message' parameter to Assertions. It is generated from source code. Nunit, Mstest, Xunit is supported.</Description>
     <PackageTags>Assert, message, Fody, Cecil, Nunit, Xunit, mstest</PackageTags>
+    <PackageOutputPath>$(SolutionDir)nugets</PackageOutputPath>
+    <PackageIconUrl>https://raw.githubusercontent.com/Fody/AssertMessage/master/package_icon.png</PackageIconUrl>
+    <PackageProjectUrl>http://github.com/Fody/AssertMessage</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody" Version="4.2.1" PrivateAssets="None" />
-    <PackageReference Include="FodyPackaging" Version="4.2.1" PrivateAssets="All" />
+    <PackageReference Include="Fody" Version="5.0.0" PrivateAssets="None" />
+    <PackageReference Include="FodyPackaging" Version="5.0.0" PrivateAssets="All" />
   </ItemGroup>
 </Project>
