--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
-version: 1.0.{build}
-image: Visual Studio 2017
+image: Visual Studio 2019 Preview
+skip_commits:
+  message: /Merge pull request.*/
 build_script:
 - cmd: dotnet build --configuration Release
 test:
