--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,7 +9,8 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="XunitLogger" Version="2.5.0" />
+    <PackageReference Include="XunitLogger" Version="3.0.2" />
+    <PackageReference Include="Xunit.ApprovalTests" Version="3.0.2" />
     <ProjectReference Include="..\AssemblyToProcess\AssemblyToProcess.csproj" />
     <ProjectReference Include="..\AssertMessage.Fody\AssertMessage.Fody.csproj" />
     <Reference Include="Microsoft.CSharp" />
