--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,7 +9,8 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-    <PackageReference Include="Xunit.ApprovalTests" Version="4.6.0" />
+    <PackageReference Include="XunitContext" Version="1.5.1" />
+    <PackageReference Include="Verify.Xunit" Version="1.0.0-beta.10" />
     <ProjectReference Include="..\AssemblyToProcess\AssemblyToProcess.csproj" />
     <ProjectReference Include="..\AssertMessage.Fody\AssertMessage.Fody.csproj" />
     <Reference Include="Microsoft.CSharp" />
