--- a/AssertMessage.Fody/AssertMessage.Fody.csproj
+++ b/AssertMessage.Fody/AssertMessage.Fody.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="FodyHelpers" Version="6.6.0" />
   </ItemGroup>
 </Project>
