--- a/AssertMessage/AssertMessage.csproj
+++ b/AssertMessage/AssertMessage.csproj
@@ -13,6 +13,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Fody" Version="6.6.0" PrivateAssets="none" />
     <PackageReference Include="FodyPackaging" Version="6.6.0" PrivateAssets="All" />
   </ItemGroup>
